[feat][test] Multi 수정,삭제 구현 및 테스트코드
